# ChangeLog for app-editors/gvim
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/gvim/ChangeLog,v 1.417 2013/12/12 07:32:07 jlec Exp $

  12 Dec 2013; Justin Lecher <jlec@gentoo.org> gvim-7.4.22.ebuild,
  gvim-7.4.41.ebuild, gvim-7.4.52.ebuild, gvim-9999.ebuild, metadata.xml:
  Drop unnecessary die and use domenu/doicon from eutils.eclass

*gvim-7.4.94 (19 Nov 2013)

  19 Nov 2013; Tim Harder <radhermit@gentoo.org> +gvim-7.4.94.ebuild,
  gvim-9999.ebuild, metadata.xml:
  Version bump. Add racket use flag (bug #350887) and selinux use flag (bug
  #490270).

*gvim-7.4.52 (15 Oct 2013)

  15 Oct 2013; Tim Harder <radhermit@gentoo.org> +gvim-7.4.52.ebuild,
  gvim-9999.ebuild:
  Version bump and add tcl use flag (bug #487038).

  07 Oct 2013; Tim Harder <radhermit@gentoo.org> gvim-7.4.22.ebuild,
  gvim-7.4.41.ebuild, gvim-9999.ebuild:
  Fix DESCRIPTION overwritten when migrated away from vim eclass.

*gvim-7.4.41 (27 Sep 2013)

  27 Sep 2013; Tim Harder <radhermit@gentoo.org> +gvim-7.4.41.ebuild:
  Version bump.

  06 Sep 2013; Tim Harder <radhermit@gentoo.org> -gvim-7.4.ebuild,
  -gvim-7.4.5.ebuild:
  Remove old.

*gvim-7.4.22 (06 Sep 2013)

  06 Sep 2013; Tim Harder <radhermit@gentoo.org> +gvim-7.4.22.ebuild,
  gvim-9999.ebuild:
  Version bump, use correct phase names, simplify deps, remove non-gvim use
  flags.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> gvim-7.3.1214.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  18 Aug 2013; Tim Harder <radhermit@gentoo.org> gvim-7.4.ebuild,
  gvim-7.4.5.ebuild, gvim-9999.ebuild:
  Remove old vim-core related completion install.

  18 Aug 2013; Tim Harder <radhermit@gentoo.org> -gvim-7.3.266.ebuild,
  -gvim-7.3.409.ebuild, -gvim-7.3.444.ebuild, -gvim-7.3.456.ebuild,
  -gvim-7.3.462.ebuild, -gvim-7.3.487.ebuild, -gvim-7.3.498.ebuild,
  -gvim-7.3.502.ebuild, -gvim-7.3.515.ebuild, -gvim-7.3.537.ebuild,