@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/gvim/gvim-7.4.94.ebuild,v 1.1 2013/11/19 10:28:43 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/gvim/gvim-7.4.94.ebuild,v 1.2 2013/12/14 07:35:59 jlec Exp $
 
 EAPI=5
 VIM_VERSION="7.4"
@@ -283,8 +283,7 @@ src_test() {
 	ln -s "${S}"/src/gvim "${S}"/src/testvim
 
 	# Don't try to do the additional GUI test
-	emake -j1 VIMPROG=../testvim nongui \
-		|| die "At least one test failed"
+	emake -j1 VIMPROG=../testvim nongui
 }
 
 # Make convenience symlinks, hopefully without stepping on toes.  Some
@@ -343,10 +342,8 @@ src_install() {
 	newins "${FILESDIR}"/gvimrc-r1 gvimrc
 	eprefixify "${ED}"/etc/vim/gvimrc
 
-	insinto /usr/share/applications
-	newins "${FILESDIR}"/gvim.desktop-r2 gvim.desktop
-	insinto /usr/share/pixmaps
-	doins "${FILESDIR}"/gvim.xpm
+	domenu "${FILESDIR}"/gvim.desktop-r2 gvim.desktop
+	doicon "${FILESDIR}"/gvim.xpm
 
 	# bash completion script, bug #79018.
 	newbashcomp "${FILESDIR}"/${PN}-completion ${PN}
